menambahkan lis pada index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Testing</h1>
+    <ul>
+        <li>idham</li>
+        <li>keva</li>
+        <li>haidar</li>
+    </ul>
 </body>
 </html>
